--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>3.2.5</version>
+		<relativePath/> <!-- lookup parent from repositoryLibro -->
 	</parent>
-	<groupId>com.aluracursos</groupId>
-	<artifactId>Literalura</artifactId>
+	<groupId>com.alura</groupId>
+	<artifactId>literalura</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Literalura</name>
-	<description>Challenger Literalura</description>
+	<name>literalura</name>
+	<description>Spring Boot  y Postgres </description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -32,6 +32,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.16.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
